[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/fonts/montreal/Montreal32.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/fonts/montreal/Montreal24.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/Interface/SettingsMenu/SettingsMenu.gd" type="Script" id=3]
[ext_resource path="res://Assets/fonts/montreal/Montreal32Bold.tres" type="DynamicFont" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.984314, 0.572549, 0.235294, 1 )
border_color = Color( 0.505882, 0.54902, 0.972549, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=2]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.321569, 0.321569, 0.321569, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=4]
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 3
border_color = Color( 0.2, 0.2, 0.2, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=3]
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.2, 0.2, 0.2, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[node name="SettingsMenu" type="Control"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
rect_min_size = Vector2( 1920, 1080 )
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Menu" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -480.0
margin_top = -270.0
margin_right = 480.0
margin_bottom = 270.0
__meta__ = {
"_edit_lock_": true
}

[node name="Background" type="Panel" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="MarginContainer" type="MarginContainer" parent="Menu/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="Panel" type="Panel" parent="Menu/Background/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 944.0
margin_bottom = 524.0
custom_styles/panel = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 928.0
margin_bottom = 508.0
custom_constants/separation = 32

[node name="CheckboxContainer" type="HBoxContainer" parent="Menu/MarginContainer/VBoxContainer"]
margin_right = 896.0
margin_bottom = 48.0
custom_constants/separation = 32
alignment = 1

[node name="FullScreenCheckbox" type="CheckBox" parent="Menu/MarginContainer/VBoxContainer/CheckboxContainer"]
margin_left = 254.0
margin_right = 468.0
margin_bottom = 48.0
focus_mode = 0
custom_colors/font_color_hover_pressed = Color( 0.72549, 0.109804, 0.109804, 1 )
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_colors/font_color_hover = Color( 0.72549, 0.109804, 0.109804, 1 )
custom_colors/font_color_pressed = Color( 0.2, 0.2, 0.2, 1 )
custom_fonts/font = ExtResource( 1 )
pressed = true
enabled_focus_mode = 0
text = "Fullscreen"

[node name="VsyncCheckbox" type="CheckBox" parent="Menu/MarginContainer/VBoxContainer/CheckboxContainer"]
margin_left = 500.0
margin_right = 642.0
margin_bottom = 48.0
focus_mode = 0
custom_colors/font_color_hover_pressed = Color( 0.72549, 0.109804, 0.109804, 1 )
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_colors/font_color_hover = Color( 0.72549, 0.109804, 0.109804, 1 )
custom_colors/font_color_pressed = Color( 0.2, 0.2, 0.2, 1 )
custom_fonts/font = ExtResource( 1 )
enabled_focus_mode = 0
text = "Vsync"

[node name="MasterVolumeContainer" type="HBoxContainer" parent="Menu/MarginContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 896.0
margin_bottom = 155.0
size_flags_vertical = 7

[node name="Label" type="Label" parent="Menu/MarginContainer/VBoxContainer/MasterVolumeContainer"]
margin_top = 17.0
margin_right = 400.0
margin_bottom = 57.0
rect_min_size = Vector2( 400, 0 )
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Master Volume"

[node name="SliderContainer" type="HBoxContainer" parent="Menu/MarginContainer/VBoxContainer/MasterVolumeContainer"]
margin_left = 404.0
margin_right = 896.0
margin_bottom = 75.0
size_flags_horizontal = 3

[node name="MasterSlider" type="HSlider" parent="Menu/MarginContainer/VBoxContainer/MasterVolumeContainer/SliderContainer"]
margin_top = 21.0
margin_right = 368.0
margin_bottom = 53.0
size_flags_horizontal = 3
size_flags_vertical = 4
value = 100.0

[node name="MasterValue" type="Label" parent="Menu/MarginContainer/VBoxContainer/MasterVolumeContainer/SliderContainer"]
margin_left = 372.0
margin_top = 17.0
margin_right = 492.0
margin_bottom = 57.0
rect_min_size = Vector2( 120, 0 )
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_fonts/font = ExtResource( 1 )
text = "100%"
align = 2

[node name="MusicVolumeContainer" type="HBoxContainer" parent="Menu/MarginContainer/VBoxContainer"]
margin_top = 187.0
margin_right = 896.0
margin_bottom = 262.0
size_flags_vertical = 7

[node name="Label" type="Label" parent="Menu/MarginContainer/VBoxContainer/MusicVolumeContainer"]
margin_top = 17.0
margin_right = 400.0
margin_bottom = 57.0
rect_min_size = Vector2( 400, 0 )
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Music Volume"

[node name="SliderContainer" type="HBoxContainer" parent="Menu/MarginContainer/VBoxContainer/MusicVolumeContainer"]
margin_left = 404.0
margin_right = 896.0
margin_bottom = 75.0
size_flags_horizontal = 3

[node name="MusicSlider" type="HSlider" parent="Menu/MarginContainer/VBoxContainer/MusicVolumeContainer/SliderContainer"]
margin_top = 21.0
margin_right = 368.0
margin_bottom = 53.0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="MusicValue" type="Label" parent="Menu/MarginContainer/VBoxContainer/MusicVolumeContainer/SliderContainer"]
margin_left = 372.0
margin_top = 17.0
margin_right = 492.0
margin_bottom = 57.0
rect_min_size = Vector2( 120, 0 )
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_fonts/font = ExtResource( 1 )
text = "100%"
align = 2

[node name="EffectsVolumeContainer" type="HBoxContainer" parent="Menu/MarginContainer/VBoxContainer"]
margin_top = 294.0
margin_right = 896.0
margin_bottom = 369.0
size_flags_vertical = 7

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/MarginContainer/VBoxContainer/EffectsVolumeContainer"]
margin_right = 400.0
margin_bottom = 75.0
rect_min_size = Vector2( 400, 0 )
custom_constants/separation = 32

[node name="Label" type="Label" parent="Menu/MarginContainer/VBoxContainer/EffectsVolumeContainer/HBoxContainer"]
margin_top = 17.0
margin_right = 245.0
margin_bottom = 57.0
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Effects Volume"

[node name="TestEffectsButton" type="Button" parent="Menu/MarginContainer/VBoxContainer/EffectsVolumeContainer/HBoxContainer"]
margin_left = 277.0
margin_top = 19.0
margin_right = 377.0
margin_bottom = 55.0
rect_min_size = Vector2( 100, 36 )
focus_mode = 0
size_flags_horizontal = 0
size_flags_vertical = 4
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_colors/font_color_hover = Color( 0.72549, 0.109804, 0.109804, 1 )
custom_colors/font_color_pressed = Color( 0.72549, 0.109804, 0.109804, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 4 )
enabled_focus_mode = 0
text = "Test"

[node name="SliderContainer" type="HBoxContainer" parent="Menu/MarginContainer/VBoxContainer/EffectsVolumeContainer"]
margin_left = 404.0
margin_right = 896.0
margin_bottom = 75.0
size_flags_horizontal = 3

[node name="EffectsSlider" type="HSlider" parent="Menu/MarginContainer/VBoxContainer/EffectsVolumeContainer/SliderContainer"]
margin_top = 21.0
margin_right = 368.0
margin_bottom = 53.0
size_flags_horizontal = 3
size_flags_vertical = 4
value = 50.0

[node name="EffectsValue" type="Label" parent="Menu/MarginContainer/VBoxContainer/EffectsVolumeContainer/SliderContainer"]
margin_left = 372.0
margin_top = 17.0
margin_right = 492.0
margin_bottom = 57.0
rect_min_size = Vector2( 120, 0 )
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_fonts/font = ExtResource( 1 )
text = "100%"
align = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/MarginContainer/VBoxContainer"]
margin_top = 426.0
margin_right = 896.0
margin_bottom = 476.0
size_flags_vertical = 10
alignment = 1

[node name="CloseButton" type="ToolButton" parent="Menu/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 323.0
margin_right = 573.0
margin_bottom = 50.0
rect_min_size = Vector2( 250, 50 )
focus_mode = 0
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_colors/font_color_hover = Color( 0.72549, 0.109804, 0.109804, 1 )
custom_colors/font_color_pressed = Color( 0.72549, 0.109804, 0.109804, 1 )
custom_fonts/font = ExtResource( 4 )
enabled_focus_mode = 0
text = "Close"

[node name="ExitGameButton" type="Button" parent="Menu/MarginContainer/VBoxContainer/HBoxContainer"]
visible = false
margin_left = 646.0
margin_right = 896.0
margin_bottom = 50.0
rect_min_size = Vector2( 250, 50 )
focus_mode = 0
size_flags_horizontal = 10
custom_fonts/font = ExtResource( 1 )
enabled_focus_mode = 0
text = "Exit Game"
